--- a/discount_modeling.ipynb
+++ b/discount_modeling.ipynb
@@ -7,7 +7,7 @@
   },
   {
    "metadata": {
-    "trusted": true
+    "trusted": false
    },
    "cell_type": "code",
    "source": "import numpy as np\n\n\"\"\"\nGiven a Price To Sales of 12 - \nHow many years is a company priced in the future when their revenue grows by 10 % yearly\n\"\"\"\n\n# given Conditions\nps = 21 # price to sales\ncurrent_revenue = 4.5\ng = 0.18 # annual growth rate",
@@ -21,7 +21,7 @@
   },
   {
    "metadata": {
-    "trusted": true
+    "trusted": false
    },
    "cell_type": "code",
    "source": "t = np.log(ps) / np.log(1 + g)\nt",
@@ -44,7 +44,7 @@
   },
   {
    "metadata": {
-    "trusted": true
+    "trusted": false
    },
    "cell_type": "code",
    "source": "def calculate_time_premium_payed(beta, g_lower, g_upper=None, name=None):\n    if g_upper is not None:\n        growth_rates = np.arange(g_lower, g_upper + 1, 1)\n        \n        outputs = []\n        \n        for g in growth_rates:\n            t = np.log(beta) / np.log(1 + g)\n            outputs.append(t)\n            \n        t_mean = np.mean(outputs)\n        if t_mean < 0:\n            t_mean = np.NaN\n        \n        print(f\"The revenue of {name if name is not None else 'Company X'} trades at a premium of {np.round(t_mean):.0f} years forward at a average growth rate of {np.mean([g_lower, g_upper]) * 100:.2f} %.\")\n        return t_mean\n    \n    t = np.log(beta) / np.log(1 + g_lower)\n    if t < 0:\n        t = np.NaN\n        \n    print(f\"The revenue of {name if name is not None else 'Company X'} trades at a premium of {np.round(t):.0f} years forward at a growth rate of {g_lower * 100:.1f} %.\")\n    return t",
@@ -53,23 +53,18 @@
   },
   {
    "metadata": {
-    "trusted": true
+    "trusted": false
    },
    "cell_type": "code",
-   "source": "f_x = calculate_time_premium_payed(5, 0.04, 0.08)",
+   "source": "f_x = calculate_time_premium_payed(6, 0.06, 0.12)",
    "execution_count": 4,
    "outputs": [
     {
      "output_type": "stream",
-     "text": "The revenue of Company X trades at a premium of 22 years forward at a average growth rate of 6.00 %.\n",
+     "text": "The revenue of Company X trades at a premium of 17 years forward at a average growth rate of 9.00 %.\n",
      "name": "stdout"
     }
    ]
-  },
-  {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": "<details>\nIn this demonstration the value $S_0$ does not affect the outcome in it's intended way.\nFurthermore the multiple $\\beta$ is dependend on $S_0$.\nHowever this doensn't invalidate the model – it's more a example data problem.\nThe following real world example demonstrates the model like expected.\n</details>"
   },
   {
    "metadata": {},
@@ -78,16 +73,16 @@
   },
   {
    "metadata": {
-    "trusted": true
+    "trusted": false
    },
    "cell_type": "code",
-   "source": "import yfinance as yf\n\n# Note: You could also use yf.Ticker(...).info[\"priceToSalesTrailing12Months\"]\n\ndef calculate_price_to_sales(symbol):\n    ticker = yf.Ticker(symbol)\n    \n    name = ticker.info[\"longName\"]\n    market_cap = ticker.info[\"marketCap\"]\n    revenue = ticker.get_income_stmt(freq=\"quarterly\").loc[\"TotalRevenue\"].sum() # yfinance returns a DataFrame with 4 quarters lookback period\n    \n    ps = market_cap / revenue\n    \n    print(f\"{name} has a PriceToSalesTTM of {ps:.2f}\")\n    \n    return ps, name",
+   "source": "import yfinance as yf\n\n# Note: You could also use yf.Ticker(...).info[\"priceToSalesTrailing12Months\"]\n\ndef calculate_price_to_sales(symbol):\n    ticker = yf.Ticker(symbol)\n    \n    name = ticker.info[\"longName\"]\n    market_cap = ticker.info[\"marketCap\"]\n    revenue = ticker.get_income_stmt(freq=\"quarterly\").loc[\"TotalRevenue\"].sum() # yfinance returns a DataFrame with 4 quarters (=TTM) lookback period\n    \n    ps = market_cap / revenue\n    \n    print(f\"{name} has a PriceToSalesTTM of {ps:.2f}\")\n    \n    return ps, name",
    "execution_count": 5,
    "outputs": []
   },
   {
    "metadata": {
-    "trusted": true
+    "trusted": false
    },
    "cell_type": "code",
    "source": "if __name__ == \"__main__\":\n    symbol = \"NVDA\"\n    \n    ps, name = calculate_price_to_sales(symbol)\n    g_lower = 0.14\n    g_upper = 0.22\n    \n    calculate_time_premium_payed(beta=ps, g_lower=g_lower, g_upper=g_upper, name=name)",
