--- a/discount_modeling.ipynb
+++ b/discount_modeling.ipynb
@@ -7,7 +7,7 @@
   },
   {
    "metadata": {
-    "trusted": false
+    "trusted": true
    },
    "cell_type": "code",
    "source": "import numpy as np\n\n\"\"\"\nGiven a Price To Sales of 12 - \nHow many years is a company priced in the future when their revenue grows by 10 % yearly\n\"\"\"\n\n# given Conditions\nps = 21 # price to sales\ncurrent_revenue = 4.5\ng = 0.18 # annual growth rate",
@@ -17,11 +17,11 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "$$\nS_0 \\cdot \\beta = S_0 \\cdot (1 + g)^t           \n$$ <br><br>\n$$\n\\beta = (1 + g)^t             \n$$ <br><br>\n$$\nlog(\\beta) = t \\cdot log(1 + g)           \n$$ <br><br>\n$$\nt = \\frac{log(\\beta)}{log(1 + g)} \n$$"
+   "source": "$$\nS_0 \\cdot \\alpha = S_0 \\cdot (1 + g)^t           \n$$ <br>\n$$\n\\alpha = (1 + g)^t             \n$$ <br>\n$$\nlog(\\alpha) = t \\cdot log(1 + g)           \n$$ <br>\n$$\nt = \\frac{log(\\alpha)}{log(1 + g)} \n$$"
   },
   {
    "metadata": {
-    "trusted": false
+    "trusted": true
    },
    "cell_type": "code",
    "source": "t = np.log(ps) / np.log(1 + g)\nt",
@@ -40,11 +40,11 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "Lets simulate this process now as a function f(x), taking an interval $[g_b; g_a]$ for the growth rate as the input, calculating the average time needed for this all rates in the given interval.\nAn interval describing the annual growth rate fits the real world revenue growth deviations better and gives a better approximation for the time premium payed."
+   "source": "Lets simulate this process now as a function f(x), taking an interval $[g_0; g_1]$ for the growth rate as the input, calculating the average time needed for this all rates in the given interval.\nAn interval describing the annual growth rate fits the real world revenue growth deviations better and gives a better approximation for the time premium payed."
   },
   {
    "metadata": {
-    "trusted": false
+    "trusted": true
    },
    "cell_type": "code",
    "source": "def calculate_time_premium_payed(beta, g_lower, g_upper=None, name=None):\n    if g_upper is not None:\n        growth_rates = np.arange(g_lower, g_upper + 1, 1)\n        \n        outputs = []\n        \n        for g in growth_rates:\n            t = np.log(beta) / np.log(1 + g)\n            outputs.append(t)\n            \n        t_mean = np.mean(outputs)\n        if t_mean < 0:\n            t_mean = np.NaN\n        \n        print(f\"The revenue of {name if name is not None else 'Company X'} trades at a premium of {np.round(t_mean):.0f} years forward at a average growth rate of {np.mean([g_lower, g_upper]) * 100:.2f} %.\")\n        return t_mean\n    \n    t = np.log(beta) / np.log(1 + g_lower)\n    if t < 0:\n        t = np.NaN\n        \n    print(f\"The revenue of {name if name is not None else 'Company X'} trades at a premium of {np.round(t):.0f} years forward at a growth rate of {g_lower * 100:.1f} %.\")\n    return t",
@@ -53,7 +53,7 @@
   },
   {
    "metadata": {
-    "trusted": false
+    "trusted": true
    },
    "cell_type": "code",
    "source": "f_x = calculate_time_premium_payed(6, 0.06, 0.12)",
@@ -73,7 +73,7 @@
   },
   {
    "metadata": {
-    "trusted": false
+    "trusted": true
    },
    "cell_type": "code",
    "source": "import yfinance as yf\n\n# Note: You could also use yf.Ticker(...).info[\"priceToSalesTrailing12Months\"]\n\ndef calculate_price_to_sales(symbol):\n    ticker = yf.Ticker(symbol)\n    \n    name = ticker.info[\"longName\"]\n    market_cap = ticker.info[\"marketCap\"]\n    revenue = ticker.get_income_stmt(freq=\"quarterly\").loc[\"TotalRevenue\"].sum() # yfinance returns a DataFrame with 4 quarters (=TTM) lookback period\n    \n    ps = market_cap / revenue\n    \n    print(f\"{name} has a PriceToSalesTTM of {ps:.2f}\")\n    \n    return ps, name",
@@ -82,7 +82,7 @@
   },
   {
    "metadata": {
-    "trusted": false
+    "trusted": true
    },
    "cell_type": "code",
    "source": "if __name__ == \"__main__\":\n    symbol = \"NVDA\"\n    \n    ps, name = calculate_price_to_sales(symbol)\n    g_lower = 0.14\n    g_upper = 0.22\n    \n    calculate_time_premium_payed(beta=ps, g_lower=g_lower, g_upper=g_upper, name=name)",
